--- a/css/index.css
+++ b/css/index.css
@@ -92,14 +92,39 @@ h2{
 }
 
 .loginbox{
-    padding: 3%;
+    padding-top: 3%;
+    padding-left: 10%;
+    padding-right:10% ;
     font-family: Roboto;
     font-weight: 500;  
     font-size: 2rem;
     color: black;
     width: 90%;
-    height: 500px;
+    height: 700px;
     background: #fff;
     z-index: 1;
     position: absolute;
+    top: 200px;
+    left: 5%;
 }
+
+h3{
+    padding: 3%;
+    font-size: 3rem;
+    margin-bottom: 15px;
+    font-weight: 500;
+}
+
+input[type=text], input[type=password] {
+    width: 100%;
+    height: 100px;
+    padding: 12px 20px;
+    margin: 15px 0;
+    display: inline-block;
+    border: 1px solid #c4c4c4;
+    border-radius:10px ;
+    box-sizing: border-box;
+    font-weight: 500;
+    color: #c4c4c4;
+  }
+
