--- a/css/creditcard.css
+++ b/css/creditcard.css
@@ -40,3 +40,9 @@ button{
     padding: 5px 16px;
     margin-bottom: 16px;
 }
+
+.fa-times{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
