--- a/css/stafffind.css
+++ b/css/stafffind.css
@@ -41,8 +41,9 @@ input[type=text]{
 }
 
 .fa-times{
-    position: left;
+    position: absolute;
     top: 10px;
+    right: 10px;
 }
 
 .edit-btn{
